syntax = "proto3";

package diagnosis;
option go_package = "github.com/ngure1/hackatsuki/proto/diagnosispb";


/**
  * Proto Defintion for getting diagnosis
  * @Param/request message type: 
      * array bytes(our image)
      * optional string description/prompt
  * @Return/response message type: streamed string from model
*/

service Diagnosis {
  rpc GetDiagnosis(DiagnosisRequest) returns (stream DiagnosisResponse) {}
}

message DiagnosisRequest {
  bytes imageBytes = 1;
  optional string prompt = 2;
}

message DiagnosisResponse {
  string modelResponse = 1;
}


